# test_cmake_emscripten

./: CMakeLists.txt  add_emscripten_env.sh  build.sh
bindings/: CMakeLists.txt  bindings.cpp  test.js  testclasswrapper.cpp  testclasswrapper.h
src/: CMakeLists.txt  testclass.cpp  testclass.h
